[gd_scene load_steps=31 format=3 uid="uid://c143jlx5a48xq"]

[ext_resource type="Script" path="res://scripts/audio_manager.gd" id="1_a50u8"]
[ext_resource type="FontFile" uid="uid://dwt70hmkpth8w" path="res://fonts/Itim-Regular.ttf" id="2_5nmgb"]
[ext_resource type="AudioStream" uid="uid://bvraa0aha8xrp" path="res://sounds/sfx/WOW Anime Sound.mp3" id="2_050qa"]
[ext_resource type="Texture2D" uid="uid://c5egu1yoo5ahw" path="res://artwork/icon_music.png" id="2_ru20c"]
[ext_resource type="Texture2D" uid="uid://crtfc2sw6sans" path="res://artwork/icon_soundwave.png" id="3_dw7kf"]
[ext_resource type="AudioStream" uid="uid://coolshv11ct6b" path="res://sounds/sfx/Poison.ogg" id="5_enwpk"]
[ext_resource type="AudioStream" uid="uid://cfl55q0m1bkuy" path="res://sounds/sfx/Teleport.ogg" id="6_5fllq"]
[ext_resource type="AudioStream" uid="uid://oglu4ne5or8e" path="res://sounds/sfx/Fall.ogg" id="7_qy7i1"]
[ext_resource type="AudioStream" uid="uid://c4rq6yktaw1hf" path="res://sounds/sfx/Cursor1.ogg" id="8_oo2o5"]
[ext_resource type="AudioStream" uid="uid://d1cgxbcc2wv00" path="res://sounds/sfx/Ice1.ogg" id="9_phccj"]
[ext_resource type="AudioStream" uid="uid://cgf6omadf77un" path="res://sounds/sfx/Ice2.ogg" id="10_ust2b"]
[ext_resource type="AudioStream" uid="uid://0axbqokny78p" path="res://sounds/sfx/Ice3.ogg" id="11_m38po"]
[ext_resource type="AudioStream" uid="uid://dd6i5hiij1w85" path="res://sounds/sfx/Ice4.ogg" id="12_jiftg"]
[ext_resource type="AudioStream" uid="uid://bcrct0knk7rg1" path="res://sounds/sfx/Ice5.ogg" id="13_4eh18"]
[ext_resource type="AudioStream" uid="uid://dk1i4tmegpysx" path="res://sounds/sfx/Explosion1.ogg" id="14_cp4jj"]
[ext_resource type="AudioStream" uid="uid://co0slbue85ex3" path="res://sounds/sfx/Explosion2.ogg" id="15_kqppw"]
[ext_resource type="AudioStream" uid="uid://b6q517g13lge" path="res://sounds/sfx/Darkness3.ogg" id="16_rkdth"]
[ext_resource type="AudioStream" uid="uid://5uoui24js0iw" path="res://sounds/sfx/Darkness4.ogg" id="17_drun2"]
[ext_resource type="AudioStream" uid="uid://ct0cvfxcuj0fo" path="res://sounds/sfx/Magic3.ogg" id="18_1c1e1"]
[ext_resource type="AudioStream" uid="uid://b7vrdo0rgud0e" path="res://sounds/sfx/Magic4.ogg" id="19_g5nyc"]
[ext_resource type="AudioStream" uid="uid://rcnj2gdssqjy" path="res://sounds/sfx/Paralyze1.ogg" id="20_ol0b1"]
[ext_resource type="AudioStream" uid="uid://cu1q4icvaibwo" path="res://sounds/sfx/Skill1.ogg" id="21_xlyy2"]
[ext_resource type="AudioStream" uid="uid://bpfteackh4rc5" path="res://sounds/sfx/Skill3.ogg" id="22_btfcl"]
[ext_resource type="AudioStream" uid="uid://dvwxivvbk2agd" path="res://sounds/sfx/broken.ogg" id="23_ria1x"]

[sub_resource type="LabelSettings" id="LabelSettings_qjytb"]
font = ExtResource("2_5nmgb")
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7x57b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fv6jc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uuhyf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mc4fe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wjm2d"]

[node name="audio_manager" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_a50u8")

[node name="music" type="VSlider" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -482.0
offset_right = -110.0
offset_bottom = -127.0
grow_horizontal = 0
grow_vertical = 0
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="music"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_top = -48.0
offset_right = 45.5
offset_bottom = -3.0
grow_horizontal = 2
text = "Music"
label_settings = SubResource("LabelSettings_qjytb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="sfx" type="VSlider" parent="."]
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -81.0
offset_top = -482.0
offset_right = -30.0
offset_bottom = -128.0
grow_horizontal = 0
grow_vertical = 0
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="sfx"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_top = -48.0
offset_right = 45.5
offset_bottom = -3.0
grow_horizontal = 2
text = "Sfx"
label_settings = SubResource("LabelSettings_qjytb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="icon" type="TextureRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -113.0
offset_right = -84.0
offset_bottom = -37.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("2_ru20c")
expand_mode = 1

[node name="button" type="Button" parent="icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -36.5
offset_right = 36.5
offset_bottom = 36.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_7x57b")
theme_override_styles/hover = SubResource("StyleBoxEmpty_fv6jc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uuhyf")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mc4fe")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wjm2d")
flat = true

[node name="ishow" type="TextureRect" parent="icon"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -51.0
offset_right = 93.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_dw7kf")
expand_mode = 1

[node name="reward" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_050qa")
bus = &"Sfx"

[node name="malt" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_enwpk")
bus = &"Sfx"

[node name="skill_1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5fllq")
bus = &"Sfx"

[node name="fall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qy7i1")
pitch_scale = 0.5
bus = &"Sfx"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_oo2o5")
bus = &"Sfx"

[node name="ice1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_phccj")
bus = &"Sfx"

[node name="ice2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ust2b")
bus = &"Sfx"

[node name="ice3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_m38po")
bus = &"Sfx"

[node name="ice4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_jiftg")
bus = &"Sfx"

[node name="ice5" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_4eh18")
bus = &"Sfx"

[node name="exp1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_cp4jj")
bus = &"Sfx"

[node name="exp2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_kqppw")
bus = &"Sfx"

[node name="dark3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_rkdth")
pitch_scale = 0.3
bus = &"Sfx"

[node name="dark4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_drun2")
pitch_scale = 0.3
bus = &"Sfx"

[node name="magic3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_1c1e1")
bus = &"Sfx"

[node name="magic4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_g5nyc")
pitch_scale = 2.0
bus = &"Sfx"

[node name="paralyze1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_ol0b1")
bus = &"Sfx"

[node name="skill1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_xlyy2")
bus = &"Sfx"

[node name="skill3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_btfcl")
bus = &"Sfx"

[node name="broken" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_ria1x")
bus = &"Sfx"
